Dashboard z-index fix (1.1.1)

--- a/entrypoints/dashboard/Dashboard.css
+++ b/entrypoints/dashboard/Dashboard.css
@@ -160,6 +160,7 @@
           text-overflow: ellipsis;
           text-wrap: nowrap;
           overflow-x: hidden;
+          z-index: 69;
         }
       }
 
